// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "env:activate": Object {
        "category": "99.misc",
        "description": "Activate the python environment",
        "name": "env:activate",
        "steps": Array [
          Object {
            "exec": "source .env/bin/activate",
          },
        ],
      },
      "env:create": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "env:create",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
        ],
      },
      "env:deactivate": Object {
        "category": "99.misc",
        "description": "Deactivate the python environment",
        "name": "env:deactivate",
        "steps": Array [
          Object {
            "exec": "deactivate",
          },
        ],
      },
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "name": "test",
        "steps": Array [
          Object {
            "spawn": "env:activate",
          },
          Object {
            "exec": "pytest",
          },
          Object {
            "spawn": "env:deactivate",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "test-python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test-python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test-python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
}
`;

exports[`dependencies 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
      Object {
        "name": "hypothesis",
        "type": "test",
        "version": "^6.0.3",
      },
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "env:activate": Object {
        "category": "99.misc",
        "description": "Activate the python environment",
        "name": "env:activate",
        "steps": Array [
          Object {
            "exec": "source .env/bin/activate",
          },
        ],
      },
      "env:create": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "env:create",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
        ],
      },
      "env:deactivate": Object {
        "category": "99.misc",
        "description": "Deactivate the python environment",
        "name": "env:deactivate",
        "steps": Array [
          Object {
            "exec": "deactivate",
          },
        ],
      },
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "name": "test",
        "steps": Array [
          Object {
            "spawn": "env:activate",
          },
          Object {
            "exec": "pytest",
          },
          Object {
            "spawn": "env:deactivate",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
  "test-python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test-python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test-python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
}
`;

exports[`dependencies via ctor 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
      Object {
        "name": "hypothesis",
        "type": "test",
        "version": "^6.0.3",
      },
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "env:activate": Object {
        "category": "99.misc",
        "description": "Activate the python environment",
        "name": "env:activate",
        "steps": Array [
          Object {
            "exec": "source .env/bin/activate",
          },
        ],
      },
      "env:create": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "env:create",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
        ],
      },
      "env:deactivate": Object {
        "category": "99.misc",
        "description": "Deactivate the python environment",
        "name": "env:deactivate",
        "steps": Array [
          Object {
            "exec": "deactivate",
          },
        ],
      },
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "name": "test",
        "steps": Array [
          Object {
            "spawn": "env:activate",
          },
          Object {
            "exec": "pytest",
          },
          Object {
            "spawn": "env:deactivate",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
  "test-python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test-python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test-python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
}
`;

exports[`no pytest 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "env:activate": Object {
        "category": "99.misc",
        "description": "Activate the python environment",
        "name": "env:activate",
        "steps": Array [
          Object {
            "exec": "source .env/bin/activate",
          },
        ],
      },
      "env:create": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "env:create",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
        ],
      },
      "env:deactivate": Object {
        "category": "99.misc",
        "description": "Deactivate the python environment",
        "name": "env:deactivate",
        "steps": Array [
          Object {
            "exec": "deactivate",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "test-python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test-python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test-python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
}
`;
